Navbar and Media query

--- a/backend/index.html
+++ b/backend/index.html
@@ -32,6 +32,7 @@
           <label for="search-box" class="fas fa-search"></label>
         </form>
 
+        <!--Icons  -->
         <div class="icons">
           <div id="search-btn" class="fas fa-search"></div>
           <a href="#" class="fas fa-heart"></a>
@@ -39,8 +40,19 @@
           <div id="login-btn" class="fas fa-user"></div>
         </div>
       </div>
+
+      <!--Nav  -->
+      <div class="header-2">
+        <nav class="navbar">
+          <a href="#home">home</a>
+          <a href="#featured">featured</a>
+          <a href="#arrivals">arrivals</a>
+          <a href="#reviews">reviews</a>
+          <a href="#blogs">blogs</a>
+        </nav>
+      </div>
     </header>
 
-    <section>Read me</section>
+    <script src="js/script.js"></script>
   </body>
 </html>
