--- a/backend/index.html
+++ b/backend/index.html
@@ -557,6 +557,25 @@
 
     <!-- arrivals section ends -->
 
+    <!-- deal section starts  -->
+
+<section class="deal">
+
+  <div class="content">
+      <h3>deal of the day</h3>
+      <h1>upto 50% off</h1>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde perspiciatis in atque dolore tempora quaerat at fuga dolorum natus velit.</p>
+      <a href="#" class="btn">shop now</a>
+  </div>
+
+  <div class="image">
+      <img src="image/deal-img.jpg" alt="">
+  </div>
+
+</section>
+
+<!-- deal section ends -->
+
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
   </body>
