Blog and Footer

--- a/backend/index.html
+++ b/backend/index.html
@@ -178,7 +178,7 @@
 
     <!-- icons section ends -->
 
-    <!-- featured section starts  -->
+    <!-- =================featured section starts  -->
 
     <section class="featured" id="featured">
       <h1 class="heading"><span>featured books</span></h1>
@@ -353,7 +353,7 @@
 
     <!-- featured section ends -->
 
-    <!-- newsletter section starts -->
+    <!-- ==================newsletter section starts -->
 
     <section class="newsletter">
       <form action="">
@@ -371,7 +371,7 @@
 
     <!-- newsletter section ends -->
 
-    <!-- arrivals section starts  -->
+    <!-- =================arrivals section starts  -->
 
     <section class="arrivals" id="arrivals">
       <h1 class="heading"><span>new arrivals</span></h1>
@@ -557,7 +557,7 @@
 
     <!-- arrivals section ends -->
 
-    <!-- deal section starts  -->
+    <!-- ============deal section starts  -->
 
     <section class="deal">
       <div class="content">
@@ -578,7 +578,7 @@
 
     <!-- deal section ends -->
 
-    <!-- reviews section starts  -->
+    <!-- =================reviews section starts  -->
 
     <section class="reviews" id="reviews">
       <h1 class="heading"><span>client's reviews</span></h1>
@@ -686,10 +686,159 @@
             </div>
           </div>
         </div>
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
       </div>
     </section>
 
     <!-- reviews section ends -->
+
+    <!-- blogs section starts  -->
+
+    <section class="blogs" id="blogs">
+      <h1 class="heading"><span>our blogs</span></h1>
+
+      <div class="swiper blogs-slider">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide box">
+            <div class="image">
+              <img src="image/blog-1.jpg" alt="" />
+            </div>
+            <div class="content">
+              <h3>blog title goes here</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio,
+                odio.
+              </p>
+              <a href="#" class="btn">read more</a>
+            </div>
+          </div>
+
+          <div class="swiper-slide box">
+            <div class="image">
+              <img src="image/blog-2.jpg" alt="" />
+            </div>
+            <div class="content">
+              <h3>blog title goes here</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio,
+                odio.
+              </p>
+              <a href="#" class="btn">read more</a>
+            </div>
+          </div>
+
+          <div class="swiper-slide box">
+            <div class="image">
+              <img src="image/blog-3.jpg" alt="" />
+            </div>
+            <div class="content">
+              <h3>blog title goes here</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio,
+                odio.
+              </p>
+              <a href="#" class="btn">read more</a>
+            </div>
+          </div>
+
+          <div class="swiper-slide box">
+            <div class="image">
+              <img src="image/blog-4.jpg" alt="" />
+            </div>
+            <div class="content">
+              <h3>blog title goes here</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio,
+                odio.
+              </p>
+              <a href="#" class="btn">read more</a>
+            </div>
+          </div>
+
+          <div class="swiper-slide box">
+            <div class="image">
+              <img src="image/blog-5.jpg" alt="" />
+            </div>
+            <div class="content">
+              <h3>blog title goes here</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio,
+                odio.
+              </p>
+              <a href="#" class="btn">read more</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- blogs section ends -->
+
+    <!-- footer section starts  -->
+
+    <section class="footer">
+      <div class="box-container">
+        <div class="box">
+          <h3>our locations</h3>
+          <a href="#"> <i class="fas fa-map-marker-alt"></i> india </a>
+          <a href="#"> <i class="fas fa-map-marker-alt"></i> USA </a>
+          <a href="#"> <i class="fas fa-map-marker-alt"></i> russia </a>
+          <a href="#"> <i class="fas fa-map-marker-alt"></i> france </a>
+          <a href="#"> <i class="fas fa-map-marker-alt"></i> japan </a>
+          <a href="#"> <i class="fas fa-map-marker-alt"></i> africa </a>
+        </div>
+
+        <div class="box">
+          <h3>quick links</h3>
+          <a href="#"> <i class="fas fa-arrow-right"></i> home </a>
+          <a href="#"> <i class="fas fa-arrow-right"></i> featured </a>
+          <a href="#"> <i class="fas fa-arrow-right"></i> arrivals </a>
+          <a href="#"> <i class="fas fa-arrow-right"></i> reviews </a>
+          <a href="#"> <i class="fas fa-arrow-right"></i> blogs </a>
+        </div>
+
+        <div class="box">
+          <h3>extra links</h3>
+          <a href="#"> <i class="fas fa-arrow-right"></i> account info </a>
+          <a href="#"> <i class="fas fa-arrow-right"></i> ordered items </a>
+          <a href="#"> <i class="fas fa-arrow-right"></i> privacy policy </a>
+          <a href="#"> <i class="fas fa-arrow-right"></i> payment method </a>
+          <a href="#"> <i class="fas fa-arrow-right"></i> our serivces </a>
+        </div>
+
+        <div class="box">
+          <h3>contact info</h3>
+          <a href="#"> <i class="fas fa-phone"></i> +233-555-4444 </a>
+          <a href="#"> <i class="fas fa-phone"></i> +233-222-3333 </a>
+          <a href="#">
+            <i class="fas fa-envelope"></i> saaluissaka@gmail.com
+          </a>
+          <img src="image/worldmap.png" class="map" alt="" />
+        </div>
+      </div>
+
+      <div class="share">
+        <a href="#" class="fab fa-facebook-f"></a>
+        <a href="#" class="fab fa-twitter"></a>
+        <a href="#" class="fab fa-instagram"></a>
+        <a href="#" class="fab fa-linkedin"></a>
+        <a href="#" class="fab fa-pinterest"></a>
+      </div>
+
+      <div class="credit">
+        Built with love by <span>Saalu</span> | all rights reserved!
+      </div>
+    </section>
+
+    <!-- footer section ends -->
+
+<!-- loader  -->
+
+<div class="loader-container">
+  <img src="image/loader-img.gif" alt="">
+</div>
+
 
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
